Skip to content
GitLab
Projects Groups Topics Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • mutter mutter
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributor statistics
    • Graph
    • Compare revisions
  • Issues 1.3k
    • Issues 1.3k
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 169
    • Merge requests 169
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Artifacts
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
    • Model experiments
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • muttermutter
  • Issues
  • #463

Maximizing a window whose minumum size is larger than the output size leaves the position unchanged

Funny one.

Try maximizing a window whose minimum size is already larger than the output size.

Mutter will change the state to "maximized" (so that the CSD match the "maximized" state) but will not relocate the window on screen, leaving the window where it was before maximization.

To reproduce:

  1. Run mutter nested
  2. Run gnome-control-center
  3. Maximize gnome-control-center

Actual result:

The window stays at the same location but the decorations are as if the window was maximized.

Unmaximized:

Screenshot_from_2019-02-14_16-36-27

Maximized:

Screenshot_from_2019-02-14_16-36-38

This is on Wayland BTW.

Edited Feb 14, 2019 by Olivier Fourdan
Assignee
Assign to
Time tracking